--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -113,6 +113,7 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
+allow 114.35.245.150;
 allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -145,6 +146,7 @@ allow 146.70.164.210;
 allow 146.70.81.186;
 allow 147.45.116.145;
 allow 147.45.78.34;
+allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -154,6 +156,10 @@ allow 151.80.148.159;
 allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.185.133;
+allow 154.213.185.165;
+allow 154.213.185.183;
+allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
@@ -520,6 +526,9 @@ allow 185.241.208.28;
 allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.241.208.81;
+allow 185.243.23.152;
+allow 185.243.23.157;
+allow 185.243.23.177;
 allow 185.243.23.81;
 allow 185.244.192.175;
 allow 185.244.192.184;
@@ -663,6 +672,8 @@ allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.164.122.21;
 allow 194.233.174.56;
+allow 194.26.141.21;
+allow 194.26.141.56;
 allow 194.26.192.161;
 allow 194.26.192.77;
 allow 194.62.248.21;
@@ -813,6 +824,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
+allow 2001:b011:4002:3d4f::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
@@ -1443,6 +1455,10 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:141:2c::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:15::1;
 allow 2a06:1700:0:15::2;
@@ -1691,6 +1707,8 @@ allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:1::9138:1538;
+allow 2a10:1fc0:1::b3ba:4eb8;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1732,7 +1750,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.131.65.34;
 allow 45.132.246.245;
 allow 45.134.225.36;
