--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -119,8 +119,6 @@ allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
-allow 130.0.233.34;
-allow 130.0.236.83;
 allow 130.193.10.21;
 allow 130.193.15.186;
 allow 136.244.111.163;
@@ -156,6 +154,10 @@ allow 151.80.148.159;
 allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.185.133;
+allow 154.213.185.165;
+allow 154.213.185.183;
+allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
@@ -200,6 +202,7 @@ allow 172.235.39.204;
 allow 172.236.53.181;
 allow 172.81.131.110;
 allow 172.81.131.111;
+allow 172.81.131.156;
 allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -287,7 +290,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -564,6 +566,7 @@ allow 188.214.104.21;
 allow 188.244.106.81;
 allow 188.253.112.49;
 allow 188.253.7.106;
+allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
@@ -1388,6 +1391,7 @@ allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
+allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
@@ -1448,6 +1452,10 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:141:2c::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:15::1;
 allow 2a06:1700:0:15::2;
@@ -1736,6 +1744,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
+allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1924,7 +1934,6 @@ allow 82.153.138.119;
 allow 8.218.9.41;
 allow 82.221.128.191;
 allow 82.221.131.5;
-allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.96.213.63;
