--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -436,6 +436,7 @@ allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
+allow 2a03:4000:13:7c3:dead:beef:ca1f:1337;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
@@ -496,6 +497,10 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:141:2c::1;
+allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
+allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:15::1;
 allow 2a06:1700:0:15::2;
