--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -125,7 +125,6 @@ allow 130.193.15.186;
 allow 136.244.111.163;
 allow 137.184.197.55;
 allow 138.59.18.110;
-allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.239.146.142;
@@ -199,7 +198,6 @@ allow 172.105.161.162;
 allow 172.232.173.127;
 allow 172.234.120.235;
 allow 172.234.228.174;
-allow 172.235.39.204;
 allow 172.236.53.181;
 allow 172.81.131.110;
 allow 172.81.131.111;
@@ -212,7 +210,6 @@ allow 176.121.81.51;
 allow 176.124.221.200;
 allow 176.126.253.190;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
@@ -517,8 +514,8 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
+allow 185.241.208.232;
 allow 185.241.208.236;
-allow 185.241.208.243;
 allow 185.241.208.28;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -1378,13 +1375,12 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
-allow 2a01:7e03::f03c:95ff:fe9d:4051;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
+allow 2a02:842b:821a:1801::abcd;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
@@ -1478,7 +1474,6 @@ allow 2a0a:3840:8078:26:0:504e:1a7a:1337;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-allow 2a0b:4140:6dfd::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1962,7 +1957,6 @@ allow 89.147.110.202;
 allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.185.85.140;
-allow 89.22.235.169;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
@@ -1998,6 +1992,7 @@ allow 92.246.138.145;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.8.245.134;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
