--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -125,7 +125,6 @@ set_real_ip_from 130.193.15.186;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.184.197.55;
 set_real_ip_from 138.59.18.110;
-set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
 set_real_ip_from 141.239.146.142;
@@ -199,7 +198,6 @@ set_real_ip_from 172.105.161.162;
 set_real_ip_from 172.232.173.127;
 set_real_ip_from 172.234.120.235;
 set_real_ip_from 172.234.228.174;
-set_real_ip_from 172.235.39.204;
 set_real_ip_from 172.236.53.181;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.111;
@@ -212,7 +210,6 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.124.221.200;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
-set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
@@ -517,8 +514,8 @@ set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
+set_real_ip_from 185.241.208.232;
 set_real_ip_from 185.241.208.236;
-set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.28;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
@@ -1378,13 +1375,12 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
-set_real_ip_from 2a01:7e03::f03c:95ff:fe9d:4051;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
+set_real_ip_from 2a02:842b:821a:1801::abcd;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
 set_real_ip_from 2a02:c207:3002:8283::1;
@@ -1478,7 +1474,6 @@ set_real_ip_from 2a0a:3840:8078:26:0:504e:1a7a:1337;
 set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
-set_real_ip_from 2a0b:4140:6dfd::2;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1962,7 +1957,6 @@ set_real_ip_from 89.147.110.202;
 set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.185.85.140;
-set_real_ip_from 89.22.235.169;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.37.95.34;
@@ -1998,6 +1992,7 @@ set_real_ip_from 92.246.138.145;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
+set_real_ip_from 93.8.245.134;
 set_real_ip_from 93.95.228.125;
 set_real_ip_from 93.95.228.205;
 set_real_ip_from 93.95.230.165;
