--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -198,10 +198,10 @@ allow 172.105.161.162;
 allow 172.232.173.127;
 allow 172.234.120.235;
 allow 172.234.228.174;
-allow 172.236.53.181;
 allow 172.81.131.110;
 allow 172.81.131.111;
 allow 172.81.131.156;
+allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.249.57.253;
 allow 173.255.198.243;
@@ -210,6 +210,7 @@ allow 176.121.81.51;
 allow 176.124.221.200;
 allow 176.126.253.190;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
@@ -514,8 +515,8 @@ allow 185.241.208.196;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.232;
 allow 185.241.208.236;
+allow 185.241.208.243;
 allow 185.241.208.28;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -651,7 +652,6 @@ allow 193.218.118.155;
 allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
-allow 193.218.118.188;
 allow 193.218.118.89;
 allow 193.233.133.109;
 allow 193.233.48.43;
@@ -1081,7 +1081,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c09::f03c:95ff:fe8d:3f4a;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0a::f03c:95ff:fe8d:6977;
-allow 2600:3c14::f03c:95ff:fe9d:51bf;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -1375,6 +1374,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1691,7 +1691,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
-allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1732,14 +1731,13 @@ allow 37.48.70.156;
 allow 38.97.116.244;
 allow 40.78.98.178;
 allow 43.157.40.39;
-allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.248;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
