--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -198,10 +198,10 @@ set_real_ip_from 172.105.161.162;
 set_real_ip_from 172.232.173.127;
 set_real_ip_from 172.234.120.235;
 set_real_ip_from 172.234.228.174;
-set_real_ip_from 172.236.53.181;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.111;
 set_real_ip_from 172.81.131.156;
+set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.0.3.111;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
@@ -210,6 +210,7 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.124.221.200;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
@@ -514,8 +515,8 @@ set_real_ip_from 185.241.208.196;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
-set_real_ip_from 185.241.208.232;
 set_real_ip_from 185.241.208.236;
+set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.28;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
@@ -651,7 +652,6 @@ set_real_ip_from 193.218.118.155;
 set_real_ip_from 193.218.118.173;
 set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
-set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
 set_real_ip_from 193.233.133.109;
 set_real_ip_from 193.233.48.43;
@@ -1081,7 +1081,6 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c09::f03c:95ff:fe8d:3f4a;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe8d:6977;
-set_real_ip_from 2600:3c14::f03c:95ff:fe9d:51bf;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
@@ -1375,6 +1374,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
@@ -1691,7 +1691,6 @@ set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
-set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1732,14 +1731,13 @@ set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 40.78.98.178;
 set_real_ip_from 43.157.40.39;
-set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
-set_real_ip_from 45.129.84.248;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
