--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -515,7 +515,6 @@ allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
 allow 185.241.208.232;
-allow 185.241.208.243;
 allow 185.241.208.28;
 allow 185.241.208.54;
 allow 185.241.208.71;
@@ -630,6 +629,7 @@ allow 192.99.149.111;
 allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
+allow 193.109.120.83;
 allow 193.142.146.139;
 allow 193.142.147.233;
 allow 193.142.147.69;
@@ -952,7 +952,6 @@ allow 209.141.32.198;
 allow 209.141.36.191;
 allow 209.141.37.94;
 allow 209.141.46.203;
-allow 209.141.51.180;
 allow 209.141.51.30;
 allow 209.141.54.203;
 allow 209.141.55.26;
@@ -1447,6 +1446,8 @@ allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
+allow 2a05:541:112:31::1;
+allow 2a05:541:121:33::1;
 allow 2a05:541:141:2c::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
@@ -1696,6 +1697,7 @@ allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:1::16b3:eac5;
 allow 2a10:1fc0:1::9138:1538;
 allow 2a10:1fc0:1::b3ba:4eb8;
 allow 2a10:c800:1:9cc6::1;
@@ -1715,6 +1717,7 @@ allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
+allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
 allow 35.0.127.52;
@@ -1738,7 +1741,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.135.132.20;
@@ -1930,6 +1932,7 @@ allow 82.221.131.5;
 allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
+allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
