--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -494,6 +494,8 @@ deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
+deny 2a05:541:112:31::1;
+deny 2a05:541:121:33::1;
 deny 2a05:541:141:2c::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:67c6::1;
@@ -743,6 +745,7 @@ deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
+deny 2a10:1fc0:1::16b3:eac5;
 deny 2a10:1fc0:1::9138:1538;
 deny 2a10:1fc0:1::b3ba:4eb8;
 deny 2a10:c800:1:9cc6::1;
