--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -515,7 +515,6 @@ set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
 set_real_ip_from 185.241.208.206;
 set_real_ip_from 185.241.208.232;
-set_real_ip_from 185.241.208.243;
 set_real_ip_from 185.241.208.28;
 set_real_ip_from 185.241.208.54;
 set_real_ip_from 185.241.208.71;
@@ -630,6 +629,7 @@ set_real_ip_from 192.99.149.111;
 set_real_ip_from 192.99.168.180;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
+set_real_ip_from 193.109.120.83;
 set_real_ip_from 193.142.146.139;
 set_real_ip_from 193.142.147.233;
 set_real_ip_from 193.142.147.69;
@@ -952,7 +952,6 @@ set_real_ip_from 209.141.32.198;
 set_real_ip_from 209.141.36.191;
 set_real_ip_from 209.141.37.94;
 set_real_ip_from 209.141.46.203;
-set_real_ip_from 209.141.51.180;
 set_real_ip_from 209.141.51.30;
 set_real_ip_from 209.141.54.203;
 set_real_ip_from 209.141.55.26;
@@ -1447,6 +1446,8 @@ set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
+set_real_ip_from 2a05:541:112:31::1;
+set_real_ip_from 2a05:541:121:33::1;
 set_real_ip_from 2a05:541:141:2c::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
@@ -1696,6 +1697,7 @@ set_real_ip_from 2a0f:e586:f:f::188;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
+set_real_ip_from 2a10:1fc0:1::16b3:eac5;
 set_real_ip_from 2a10:1fc0:1::9138:1538;
 set_real_ip_from 2a10:1fc0:1::b3ba:4eb8;
 set_real_ip_from 2a10:c800:1:9cc6::1;
@@ -1715,6 +1717,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:178;
 set_real_ip_from 2a12:a800:2:1:45:141:215:116;
 set_real_ip_from 2a12:bec4:11d3:de9f::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
+set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
 set_real_ip_from 35.0.127.52;
@@ -1738,7 +1741,6 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1930,6 +1932,7 @@ set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
+set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
